Implement auth and tasks controllers
